______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.202:

* XINS/Java Common Library:
  - Added a new static method getItemByName() in EnumItem.
  - Changed the getItemByValue() to a static method.
  - Renamed getTimeOut() in class TargetDescriptor to getTotalTimeOut().
    Deprecated the method with the old name.
  - Added size() method to PropertyReader interface and to all implementing
    classes.

* XINS/Java Client Framework:
  - CallException and all subclasses now take CallRequest, TargetDescriptor
    and duration arguments. The exception message has been greatly improved.
    The old constructors have been removed, so existing code may need
    altering.
  - Removed deprecated methods from XINSServiceCaller class.
  - Added failOverAllowed property in CallRequest and changed
    XINSServiceCaller to always allow fail-over if this property is set.

* Generated specification documentation:
  - Implemented the pcdata-example attribute.

* Logdoc:
  - Removed the possibility to have multi-line text in the translation element
    of the translation-bundle.xml file as it removed some needed spaces.

* Generated build file
  - Added the name of the API as a parameter in the generated web.xml file.

* Build and release process:
  - Added the argument source="1.4" to the javadoc task to avoid errors with
    the assert keyword.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.201:

* XINS/Java Server Framework:
  - Changed log message 1540:
    . log the start timestamp with millisecond instead of second precision;
    . log a zero character ('0') for the error code if there is none;
    . log a hyphen ('-') for the input parameters if there are none;
    . log a hyphen ('-') for the output parameters if there are none;
    . no longer quoting the parameter values;
    . no longer logging parameters that have a null or empty string as value;